# full-name-splitter

./: .gitignore  README.md  SECURITY.md  SOP.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.well-known/: security.txt
deploy/: auto-deploy.sh  cleaners-hub-autodeploy.service  cleaners-hub-autodeploy.timer  cleaners-hub.service  full-name-splitter-autodeploy.service  full-name-splitter-autodeploy.timer  full-name-splitter.service  install-vps.sh  start.sh
src/cleaners_hub/: alerts.py  audit.py  history.py  main.py  middleware.py  secrets.py  sessions.py  settings_store.py  spend.py  streaming.py  workers.py
src/cleaners_hub/cleaners/address/: __init__.py  config.py  fetch.py  pipeline.py  types.py
src/cleaners_hub/cleaners/address/_resources/: prompt.txt
src/cleaners_hub/cleaners/address/io/: reader.py
src/cleaners_hub/cleaners/address/llm/: openrouter.py
src/cleaners_hub/cleaners/company/: config.py  types.py
src/cleaners_hub/cleaners/company/_resources/: prompt.txt
src/cleaners_hub/cleaners/name/: config.py  errors.py
src/cleaners_hub/cleaners/name/llm/: mock.py  (+3 more)
src/cleaners_hub/ui_dist/: index.html
src/cleaners_hub/ui_dist/assets/: index--FtDB53s.js  index-4SCp3Vq_.js  index-4_PsxdTS.js  index-BXIdOdhA.js  index-BkGzTfp9.js  index-Bl6l4An9.js  index-Bu2Mxcoo.js  index-CTzpoY-i.css  index-CvNI0JBU.js  index-DEnlMCMj.js  index-DFERzi_X.js  index-DGV5bA7_.css  index-Dj2DmA4K.js  index-DoWgssTr.js  index-DpS6Yzgz.js  index-Dq2vwj8m.js  index-DuSGWzBm.js  index-EJw0_Uzh.js  index-IgtfKw40.js  index-JP0YbH9M.js  index-Qe_I2lF5.js  index-RbjKYRhB.js  index-VjSlHYNo.js  index-X6vGO973.js  index-YU9t6Zq3.js  index-ouZweKpT.js
src/full_name_splitter/: alerts.py  audit.py  cost_estimate.py  history.py  main.py  middleware.py  secrets.py  sessions.py  settings_store.py  spend.py  streaming.py  workers.py
src/full_name_splitter/cleaners/address/: __init__.py  config.py  errors.py  fetch.py  pipeline.py  scope.py
src/full_name_splitter/cleaners/company/: config.py  pipeline.py
src/full_name_splitter/cleaners/fullname/: config.py  pipeline.py  types.py
src/full_name_splitter/cleaners/name/: config.py  pipeline.py
src/full_name_splitter/ui_dist/: index.html
src/full_name_splitter/ui_dist/assets/: index-BvMuRFZD.css  index-CgQSCF0I.js  index-Cxhl-6aN.js  index-DNilfZGA.css  index-Trvah9ge.js
tests/: test_cost_estimate.py  test_fullname_kind.py  test_override_and_dropnull.py
tests/fixtures/: dirty_names_golden.csv
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  hooks.ts  store.ts  styles.css  theme.ts  types.ts
ui/src/components/: CleanerPane.tsx  ColumnPicker.tsx  DropZone.tsx  ErrorBanner.tsx  HeaderStatus.tsx  ResultsTable.tsx  RunPanel.tsx
ui/src/components/atoms/: N2Chip.tsx  N2Hairline.tsx  N2Label.tsx  N2Number.tsx  N2Spark.tsx  N2Thinking.tsx
ui/src/components/chrome/: N2CostModal.tsx  N2Footer.tsx  N2HistoryDrawer.tsx  N2SettingsModal.tsx  N2Shell.tsx  N2Sidebar.tsx  N2Topbar.tsx
ui/src/components/workspace/: N2AddressTable.tsx  N2ColumnMapper.tsx  N2Detail.tsx  N2DryRun.tsx  N2EmptyHero.tsx  N2ErrorView.tsx  N2Table.tsx  N2Workspace.tsx
ui/src/lib/: actions.ts  mapping.ts
ui/src/utils/: fixtures.ts  format.ts  sparkPath.ts
(+32 files in other folders)
