[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleaners-hub"
version = "0.1.0"
description = "Web app for cleaning company names and first names via Grok. Deploys to cleaners.maxcommandcenter.com behind Cloudflare Access."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Benchmark International" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "openpyxl>=3.1",
    "ftfy>=6.2",
    "Unidecode>=1.3",
    "charset-normalizer>=3.3",
    "regex>=2024.5.15",
    "httpx>=0.27",
    "tenacity>=8.3",
    "tiktoken>=0.7",
    "resend>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
cleaners-hub = "cleaners_hub.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cleaners_hub = ["ui_dist/**/*"]
