[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "full-name-splitter"
version = "0.1.0"
description = "Splits a single Full Name column into clean First Name + Last Name via Grok. Deploys to full-name-splitter.maxcommandcenter.com behind Cloudflare Access."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Benchmark International" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "openpyxl>=3.1",
    "ftfy>=6.2",
    # Unidecode was declared but never imported — and it's GPL-2.0+, which
    # would attach combined-work obligations if full-name-splitter ever moved
    # toward distribution. Dropped 2026-04-28; re-add with a license check
    # if a real need shows up.
    "charset-normalizer>=3.3",
    "regex>=2024.5.15",
    "httpx>=0.27",
    "tenacity>=8.3",
    "tiktoken>=0.7",
    "resend>=2.0",
    # Address tab dependencies (added 2026-04-30):
    "curl_cffi>=0.7",          # TLS-fingerprint impersonation for fetcher
    "beautifulsoup4>=4.12",    # HTML parsing for address extraction
    "lxml>=5.0",               # BeautifulSoup parser backend
    "pydantic>=2.5",           # AddressResult schema validation in LLM provider
    # CSO 2026-05-14: urllib3 pulled in transitively (resend/tiktoken via
    # requests). Pinned at >=2.7.0 to clear CVE-2026-44431 + CVE-2026-44432
    # (both fixed in 2.7.0). Direct dep so pip-install paths inherit it.
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
full-name-splitter = "full_name_splitter.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
full_name_splitter = ["ui_dist/**/*"]

# Supply-chain hardening — refuse to install any package version published in the
# last 7 days. See ~/vault/20-areas/security/supply-chain-hardening.md.
[tool.uv]
exclude-newer = "7 days"
